removed the mouse mode stuff - I almost never copy with my mouse but this gives me the option if I need it, and more importantly saves me from having to explain to somebody using my computer why they can't copy and paste

--- a/tmux_config/.tmux.conf
+++ b/tmux_config/.tmux.conf
@@ -38,10 +38,11 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # we are going to enable mouse mode so we can scroll/select panes with the mouse
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane off
-set -g mouse-select-window on
+#setw -g mode-mouse on
+setw -g mode-mouse off
+#set -g mouse-select-pane on
+#set -g mouse-resize-pane off
+#set -g mouse-select-window on
 
 # color settings
 set -g default-terminal "screen-256color"
