--- a/tmux_config/.tmux.conf
+++ b/tmux_config/.tmux.conf
@@ -48,16 +48,32 @@ setw -g mode-mouse off
 set -g default-terminal "screen-256color"
 
 # status bar settings
-set -g status-fg white
-set -g status-bg black
+#set -g status-fg white
+#set -g status-bg black
+# set color for status bar
+set-option -g status-bg colour235 #base02
+set-option -g status-fg yellow #yellow
+set-option -g status-attr dim
+
+
+# visual notification of activity in other windows
+setw -g monitor-activity on
+set -g visual-activity on
 
 # window coloring settings
-setw -g window-status-fg cyan
-setw -g window-status-bg default
-setw -g window-status-attr dim
-setw -g window-status-current-fg white
-setw -g window-status-current-bg red
-setw -g window-status-current-attr bright
+#setw -g window-status-fg cyan
+#setw -g window-status-bg default
+#setw -g window-status-attr dim
+#setw -g window-status-current-fg white
+#setw -g window-status-current-bg red
+#setw -g window-status-current-attr bright
+set-window-option -g window-status-fg brightblue #base0
+set-window-option -g window-status-bg colour236 
+set-window-option -g window-status-attr dim
+
+set-window-option -g window-status-current-fg brightred #orange
+set-window-option -g window-status-current-bg colour236 
+set-window-option -g window-status-current-attr bright
 
 # pane coloring settings
 set -g pane-border-fg green 
@@ -71,9 +87,13 @@ set -g message-bg black
 set -g message-attr bright
 
 # status bar settings
-set -g status-left-length 40
-set -g status-left "#[fg=green]Session: #S #[fg=yellow]Window: #I #[fg=cyan]Pane: #P"
-set -g status-right "#[fg=cyan]%d %b %R"
+#set -g status-left-length 40
+#set -g status-left "#[fg=green]Session: #S #[fg=yellow]Window: #I #[fg=cyan]Pane: #P"
+#set -g status-right "#[fg=cyan]%d %b %R"
+set -g status-left-length 70
+set -g status-left "#[fg=green]: #h : #[fg=brightblue]#(curl icanhazip.com) #[fg=yellow]#(ifconfig eth0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
+set -g status-right-length 60
+set -g status-right "#[fg=blue]#S #I:#P #[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p :: #(date -u | awk '{print $4}')::"
 set -g status-utf8 on
 set -g status-justify centre
 
