--- a/tmux_config/.tmux.conf
+++ b/tmux_config/.tmux.conf
@@ -91,7 +91,7 @@ set -g message-attr bright
 #set -g status-left "#[fg=green]Session: #S #[fg=yellow]Window: #I #[fg=cyan]Pane: #P"
 #set -g status-right "#[fg=cyan]%d %b %R"
 set -g status-left-length 70
-set -g status-left "#[fg=green]: #h : #[fg=brightblue]#(curl icanhazip.com) #[fg=yellow]#(ifconfig eth0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
+set -g status-left "#[fg=green]: #h : #[fg=brightblue]#(curl ifconfig\.me/ip) #[fg=yellow]#(ifconfig eth0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
 set -g status-right-length 60
 set -g status-right "#[fg=blue]#S #I:#P #[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p :: #(date -u | awk '{print $4}')::"
 set -g status-utf8 on
@@ -109,6 +109,6 @@ unbind p
 bind p paste-buffer
 bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'y' copy-selection
-set-option -g default-command "reattach-to-user-namespace -l /bin/bash"
+set-option -g default-command "reattach-to-user-namespace -l /bin/zsh"
 bind C-c run "tmux save-buffer - / reattach-to-user-namespace pbcopy"
 bind C-v run "tmux set-buffer \"$(reattach-to-user-namespace pbpaste)\"; tmux paste-buffer"
