--- a/tmux_config/.tmux.conf
+++ b/tmux_config/.tmux.conf
@@ -93,7 +93,7 @@ set -g message-attr bright
 set -g status-left-length 70
 set -g status-left "#[fg=green]: #h : #[fg=brightblue]#(curl ifconfig\.me/ip) #[fg=yellow]#(ifconfig eth0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
 set -g status-right-length 60
-set -g status-right "#[fg=blue]#S #I:#P #[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p :: #(date -u | awk '{print $4}')::"
+set -g status-right "#[fg=brightblue]#S #I:#P #[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p :: #(date -u | awk '{print $4}')::"
 set -g status-utf8 on
 set -g status-justify centre
 
